[project]
name = "pg-helper"
version = "0.1.0"
description = "Cross-platform PostgreSQL management CLI for pixi-based projects"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pg-helper = "pg_helper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_helper"]
